# actix-template

./: .env.sample  .gitignore  Cargo.toml
src/: api_doc.rs  dtos.rs  errors.rs  handlers.rs  lib.rs  main.rs  routes.rs  states.rs
src/dtos/: user.rs
src/dtos/user/: create_user.rs  update_user.rs  user.rs
src/dtos/users/: create_user.rs  update_user.rs  user.rs
src/errors/: app_err.rs  res_err.rs
src/handlers/: health_check.rs  users.rs
src/handlers/users/: create_user.rs  delete_user.rs  get_all_users.rs  get_single_user.rs  update_user.rs
src/routes/: api.rs
src/states/: db.rs
