[package]
name = "actix-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
chrono = { version = "0.4.31", features = ["serde"] }
derive_more = { version = "1.0.0-beta.3", features = ["std", "error", "display"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
env_logger = "0.10.0"
error-stack = "0.4.1"
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.1", features = ["postgres", "chrono", "uuid", "runtime-tokio"] }
utoipa = { version = "3.5.0", features = ["actix_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "3.1.5", features = ["actix-web"] }
uuid = { version = "1.4.1", features = ["serde", "v4", "fast-rng"] }
